--- a/scss/variables/_extend.scss
+++ b/scss/variables/_extend.scss
@@ -1,7 +1,14 @@
 %estiloCard {
     background-color: $colorHover;
-    box-shadow: 10px 5px rgba(63, 58, 58, 0.525);
-    border: 1px black solid;  
+    box-shadow: -1px 2px 27px -6px rgba(0,0,0,0.77);
+-webkit-box-shadow: -1px 2px 27px -6px rgba(0,0,0,0.77);
+-moz-box-shadow: -1px 2px 27px -6px rgba(0,0,0,0.77);
+    background-color: $colorFondo;
+    &:hover {
+        box-shadow: -1px 2px 32px -6px rgba(0,0,0,0.77);
+-webkit-box-shadow: -1px 2px 32px -6px rgba(0,0,0,0.77);
+-moz-box-shadow: -1px 2px 32px -6px rgba(0,0,0,0.77);
+    }
 }
 
 @mixin fontStyle ($colorTitle, $alignText) {
