--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,3 +5,4 @@
 @import '../scss/secciones/index';
 @import './secciones/footer.scss';
 @import './secciones/venta';
+@import './secciones/contacto';
