--- a/scss/variables/_extend.scss
+++ b/scss/variables/_extend.scss
@@ -18,3 +18,24 @@
     color: $colorTitle;
     text-align: $alignText;
 }
+
+%estiloImagenTitulos {
+    padding: 15px;
+    text-align: start;
+    background-image: url("https://res.cloudinary.com/maxjhernandez/image/upload/v1662510756/Las%20Mar%C3%ADas/nagesh-badu-vYcH7pI6v1Q-unsplash_g76lda.jpg"); /* The image used */
+    height: 250px;
+    background-color: #cccccc; /* Used if the image is unavailable */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+    display: flex;
+    align-items: center;
+}
+
+%estiloTitulos {
+    display: flex;
+    background-color: rgba(118, 107, 107, 0.646);
+    padding: 15px 25px 15px 25px;
+    margin: 0;
+    color: $colorFondo;
+}
