--- a/scss/variables/_extend.scss
+++ b/scss/variables/_extend.scss
@@ -39,3 +39,9 @@
     margin: 0;
     color: $colorFondo;
 }
+
+%estiloTitulosFooter {
+    padding: 20px;
+    border-bottom: 2px $colorHover solid ;
+    color: $colorHover;
+}
