--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box; }
+
 main .propiedades-destacadas .card, main .venta-arr-main .casas-container .card {
   background-color: #ffe4c4;
   box-shadow: -1px 2px 27px -6px rgba(0, 0, 0, 0.77);
@@ -32,6 +35,11 @@ main .propiedades-destacadas .card, main .venta-arr-main .casas-container .card 
   padding: 15px 25px 15px 25px;
   margin: 0;
   color: #dfdfcecc; }
+
+.footer .contacto h4, .footer .redes-cont h4 {
+  padding: 20px;
+  border-bottom: 2px #ffe4c4 solid;
+  color: #ffe4c4; }
 
 header .navbar-expand-lg {
   justify-content: flex-end;
@@ -162,25 +170,45 @@ main .propiedades-destacadas {
   grid-template-rows: 1fr;
   gap: 0px 0px;
   grid-template-areas: "contacto redes-cont copyright";
-  align-items: center;
   grid-area: footer;
   background-color: #193724; }
   .footer .contacto {
     grid-area: contacto;
+    font-size: 70%;
+    display: flex;
+    flex-direction: column;
     background-color: #193724;
     padding: 10px;
     margin: 0;
     color: #dfdfcecc;
     text-align: start; }
+    .footer .contacto ul {
+      list-style: none;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      height: fit-content; }
+      .footer .contacto ul li {
+        display: flex;
+        align-items: center;
+        margin: 10px 0px 10px 0px; }
+        .footer .contacto ul li img {
+          height: 20px;
+          margin-right: 5px; }
+        .footer .contacto ul li p {
+          margin: 0; }
   .footer .redes-cont {
     grid-area: redes-cont;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 15px; }
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    font-size: 70%;
+    padding: 10px; }
     .footer .redes-cont img {
-      width: 70px;
+      width: 40px;
+      margin-top: 20px;
       padding: 5px; }
       .footer .redes-cont img:hover {
         transform: translateY(2px); }
