--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -1,7 +1,7 @@
 
 .footer {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr; 
     grid-template-rows: 1fr;
     gap: 0px 0px;
     grid-template-areas: "contacto redes-cont copyright";
@@ -18,6 +18,7 @@
         @include fontStyle ($colorFondo, start)
             h4 {
                 @extend %estiloTitulosFooter;
+                
             }
             ul {
                 list-style: none;
@@ -44,7 +45,7 @@
         grid-area: redes-cont;
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         justify-content: flex-start;
         font-size: 70%;
         padding: 10px;
@@ -61,6 +62,42 @@
             &:hover {
                 transform: translateY(2px);
             }
+        }
+    }
+
+    .servicios-footer {
+       font-size: 70%;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+
+        h4 {
+            @extend %estiloTitulosFooter
+        }
+        
+        ul {
+            list-style: none;
+                padding: 20px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                height: fit-content;
+                li {
+                    margin: 5px;
+                    width: fit-content;
+                    &:hover {
+                        transform: translateY(2px);
+                    }
+                }
+
+                a {
+                    text-decoration: none;
+                    color: $colorFondo;
+                    &:hover {
+                        color: $colorHover;
+                    }
+                    
+                }
         }
     }
 
