--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -27,6 +27,7 @@
                 flex-direction: column;
                 justify-content: space-around;
                 height: fit-content;
+                margin-bottom: 0;
                 li {
                     display: flex;
                     align-items: center;
