--- a/scss/variables/_extend.scss
+++ b/scss/variables/_extend.scss
@@ -51,11 +51,14 @@
     width: 30%;
     display: flex;
     flex-direction: column;
-    background-color: gray;
+    background-color: $colorFondo;
     padding: 10px;
     gap: 10px;
     align-content: center;
     justify-content: center;
+    h3 {
+        color:blue($color: #000000);
+    }
 }
 
 %estiloBoton {
