--- a/scss/variables/_extend.scss
+++ b/scss/variables/_extend.scss
@@ -56,9 +56,7 @@
     gap: 10px;
     align-content: center;
     justify-content: center;
-    h3 {
-        color:blue($color: #000000);
-    }
+    border-left: 1px $colorTexto solid;
 }
 
 %estiloBoton {
