--- a/scss/secciones/_venta.scss
+++ b/scss/secciones/_venta.scss
@@ -64,6 +64,12 @@ main {
         .search-by {
             display: none;
         }
-       
+        .venta-arr-main {
+            .casas-container {
+                .card {
+                    width: 80%;
+                }
+            }
+        }
     }
 }
