--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -28,15 +28,20 @@
                 justify-content: space-around;
                 height: fit-content;
                 margin-bottom: 0;
-                li {
+                a {
                     display: flex;
                     align-items: center;
                     margin: 10px 0px 10px 0px;
+                    
                     img {
                         height: 20px;
                         margin-right: 5px;                    }
                     p {
                         margin: 0;
+                        color: $colorFondo;
+                        &:hover {
+                            color: $colorHover;
+                        }
                     }
                 }
             }
