--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -69,7 +69,7 @@ main {
                     background-color: rgba(0, 0, 0, 0.363);
                     color: $colorFondo;
                     margin: 0;
-                    top: 81%;
+                    bottom: 0;
                     padding: 0.5rem;
                     font-size: 1.5rem;
                 }
