--- a/scss/variables/_extend.scss
+++ b/scss/variables/_extend.scss
@@ -56,7 +56,7 @@
     gap: 10px;
     align-content: center;
     justify-content: center;
-    border-left: 1px $colorTexto solid;
+    border-left: 1px rgba(128, 128, 128, 0.515) solid;
 }
 
 %estiloBoton {
