--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ main .propiedades-destacadas .card, main .venta-arr-main .casas-container .card,
     -webkit-box-shadow: -1px 2px 32px -6px rgba(0, 0, 0, 0.77);
     -moz-box-shadow: -1px 2px 32px -6px rgba(0, 0, 0, 0.77); }
 
-main .venta-arr-title, .contacto-main .contacto-title, .quienes-main .quienes-title {
+main .venta-arr-title, .quienes-main .quienes-title {
   padding: 15px;
   text-align: start;
   background-image: url("https://res.cloudinary.com/maxjhernandez/image/upload/v1662510756/Las%20Mar%C3%ADas/nagesh-badu-vYcH7pI6v1Q-unsplash_g76lda.jpg");
@@ -32,7 +32,7 @@ main .venta-arr-title, .contacto-main .contacto-title, .quienes-main .quienes-ti
   display: flex;
   align-items: center; }
 
-main .venta-arr-title h1, .contacto-main .contacto-title h1, .quienes-main .quienes-title h1 {
+main .venta-arr-title h1, .quienes-main .quienes-title h1 {
   display: flex;
   background-color: #766b6ba5;
   padding: 15px 25px 15px 25px;
@@ -329,19 +329,6 @@ main .venta-arr-main {
 
 .contacto-main {
   background-color: #dfdfcecc; }
-  .contacto-main .contacto-title {
-    height: 250px; }
-  .contacto-main .contacto-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between; }
-    .contacto-main .contacto-info .iframe-container {
-      display: flex;
-      flex-direction: column;
-      width: 50%;
-      margin: 15px; }
-    .contacto-main .contacto-info .contacto-data {
-      padding: 15px; }
   .contacto-main .envie-consulta {
     border-top: 1px #193724 solid;
     padding: 15px;
@@ -352,6 +339,12 @@ main .venta-arr-main {
       display: flex;
       flex-direction: column;
       width: 70%; }
+      .contacto-main .envie-consulta .form-consulta .preguntas {
+        display: flex;
+        flex-direction: row; }
+        .contacto-main .envie-consulta .form-consulta .preguntas .input-group {
+          width: 50%;
+          height: 20px; }
       .contacto-main .envie-consulta .form-consulta textarea {
         margin-top: 5px;
         margin-bottom: 5px;
