--- a/scss/secciones/_contacto.scss
+++ b/scss/secciones/_contacto.scss
@@ -1,26 +1,5 @@
 .contacto-main {
     background-color: $colorFondo;
-    .contacto-title {
-        height: 250px;
-        @extend %estiloImagenTitulos;
-        h1 {
-            @extend %estiloTitulos;
-        }
-    }
-    .contacto-info {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        .iframe-container {
-            display: flex;
-            flex-direction: column;
-            width: 50%;
-            margin: 15px;
-          }
-        .contacto-data {
-            padding: 15px;
-        }
-    }
     .envie-consulta {
         border-top: 1px #193724 solid;
         padding: 15px;
@@ -32,6 +11,14 @@
             display: flex;
             flex-direction: column;
             width: 70%;
+            .preguntas {
+                display: flex;
+                flex-direction: row;
+                .input-group {
+                width: 50%;
+                height: 20px;
+                }
+                }
             textarea {
                 margin-top: 5px;
                 margin-bottom: 5px;
