--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -15,7 +15,7 @@
         font-size: 70%;
         display: flex;
         flex-direction: column;
-        @include fontStyle ($colorFondo, start)
+        @include fontStyle ($colorFondo, start);
             h4 {
                 @extend %estiloTitulosFooter;
                 
